@@ -1309,56 +1309,37 @@ static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
  ******************************************************************************/
 static void	DCmass_proxy_update_items(ZBX_DC_HISTORY *history, int history_num)
 {
-	const char		*__function_name = "DCmass_proxy_update_items";
+	const char	*__function_name = "DCmass_proxy_update_items";
 
-	size_t			sql_offset = 0;
-	zbx_vector_uint64_t	itemids;
-	int			i, j;
+	size_t		sql_offset = 0;
+	int		i;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
-	zbx_vector_uint64_create(&itemids);
+	DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
 
 	for (i = 0; i < history_num; i++)
 	{
-		if (ITEM_VALUE_TYPE_LOG == history[i].value_type)
-			zbx_vector_uint64_append(&itemids, history[i].itemid);
-	}
+		if (ITEM_STATE_NOTSUPPORTED == history[i].state)
+			continue;
 
-	zbx_vector_uint64_sort(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
-	zbx_vector_uint64_uniq(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+		if (ITEM_VALUE_TYPE_LOG != history[i].value_type)
+			continue;
 
-	DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
+		zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset,
+				"update items"
+				" set lastlogsize=" ZBX_FS_UI64
+					",mtime=%d"
+				" where itemid=" ZBX_FS_UI64 ";\n",
+				history[i].lastlogsize, history[i].mtime, history[i].itemid);
 
-	for (i = 0; i < itemids.values_num; i++)
-	{
-		for (j = history_num - 1; j >= 0; j--)
-		{
-			if (history[j].itemid != itemids.values[i])
-				continue;
-
-			if (ITEM_VALUE_TYPE_LOG != history[j].value_type)
-				continue;
-
-			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset,
-					"update items"
-					" set lastlogsize=" ZBX_FS_UI64
-						",mtime=%d"
-					" where itemid=" ZBX_FS_UI64 ";\n",
-					history[j].lastlogsize, history[j].mtime, history[j].itemid);
-
-			DBexecute_overflowed_sql(&sql, &sql_alloc, &sql_offset);
-
-			break;
-		}
+		DBexecute_overflowed_sql(&sql, &sql_alloc, &sql_offset);
 	}
 
 	DBend_multiple_update(&sql, &sql_alloc, &sql_offset);
 
 	if (sql_offset > 16)	/* In ORACLE always present begin..end; */
 		DBexecute("%s", sql);
-
-	zbx_vector_uint64_destroy(&itemids);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
@@ -2050,7 +2031,7 @@ int	DCsync_history(int sync_type)
 
 		LOCK_CACHE;
 
-		for (i = 0; i < history_num; i ++)
+		for (i = 0; i < history_num; i++)
 			uint64_array_remove(cache->itemids, &cache->itemids_num, &history[i].itemid, 1);
 
 		UNLOCK_CACHE;
